--- a/Anneaux et Corps.tex
+++ b/Anneaux et Corps.tex
@@ -38,7 +38,7 @@ L'anneau est dit commutatif lorsque $\times$ est commutatif
 
 \begin{nota} $ $
 	\begin{itemize}
-		\item [-] Pour $x \in A$ on notera $-x$ l'oppos\'e de $x$.\\
+		\item [-] Pour $x \in A$ on notera $-x$ l'oppos\'e (inverse) de $x$.\\
 			Le neutre de $+$ est 'le z\'ero' de $A$, not\'e $0_A$
 		\item [-] Le neutre de $\times$ est l'\'el\'ement unit\'e, not\'e $1_A$\\
 			On note $\mathcal{U}(A)$ le groupe des inversibles de $(A, \times)$. On note l'inverse $x^{-1}$
@@ -103,8 +103,11 @@ Soient $x, y \in A$ tels que $x \times y = y \times x$
 %Corps {{{1
 \section{Corps}
 \begin{defi} Corps \\
-	Un corps est un anneau $(A,+,\times)$ commutatif (non nul) dans lequel tout \'el\'elent non nul est inversible
-	($\mathcal{U}(A) = A\backslash\{0_A\}$)
+	Un corps est un anneau $(A,+,\times)$ commutatif (non nul) dans lequel tout \'el\'ement non nul est inversible
+	(ie. $\mathcal{U}(A) = A\backslash\{0_A\}$)
+	\begin{rqs}
+		Si $p$ est premier, on note $\mathbb{F}_p$ le corps $\mathbb{Z}/p\mathbb{Z}$
+	\end{rqs}
 \end{defi}
 
 \begin{prop}
