--- a/Dénombrement.tex
+++ b/Dénombrement.tex
@@ -26,7 +26,7 @@
 \section{Ensembles finis}
 \begin{defi}
 	Soit $E$ un ensemble. $E$ est dit fini s'il existe $n \in \mathbb{N}$ tel que $E$ est en bijection avec $[\![1,n]\!]$ \\
-	Pour $n, p \in \mathbb{N},\ [\![1,n]\!]$ est bijection avec $[\![1,p]\!] \Leftrightarrow n = p$
+	Pour $n, p \in \mathbb{N},\ [\![1,n]\!]$ est en bijection avec $[\![1,p]\!] \Leftrightarrow n = p$
 \end{defi}
 
 \begin{prop} Soit $E$ un ensemble fini, $F \subset E$
