--- a/Espaces euclidiens.tex
+++ b/Espaces euclidiens.tex
@@ -366,5 +366,11 @@ S_\theta =
 \end{prop}
 
 
-\end{document}
+%Remarques {{{1
+\section{Remarques}
+\begin{enumerate}
+	\item D\'ecomposition foncions paire/impaire: \[f(x) = \frac{f(x) + f(-x)}{2} + \frac{f(x) - f(-x)}{2}\]
+\end{enumerate}
 
+
+\end{document}
