--- a/Espaces vectoriels.tex
+++ b/Espaces vectoriels.tex
@@ -124,7 +124,8 @@ Dans la suite $E$ est un Kev.
 		\item [-] Si $S$ est une partie non vide de $E$, $Vect(S)$ est l'ensemble des CL des vecteurs de $S$
 		%\item [-]  $Vect(x_1, \hdots, x_n) = \{\sum_i^n \lambda_i x_i / (\lambda_1, \hdots, \lambda_n) \in K^n\}$ \\
 				%$Vect(x_1, \hdots, x_n) = \sum_i^n K x_i$
-		\item [-] $F+G$  est un sev de $E$ appel\'e somme de $F$ et de $G$, c'est le plus petit sev de $E$ qui contient $F\cup G$
+		\item [-] $F+G = \{x+y/ x \in F, y \in G\}$  est un sev de $E$ appel\'e somme de $F$ et de $G$, c'est le plus petit sev de $E$ qui
+			contient $F\cup G$
 	\end{enumerate}
 \end{prop}
 
@@ -179,7 +180,7 @@ Dans la suite $E$ est un Kev.
 			En particulier, $f(E) = Im f$ et $Im f = F \Leftrightarrow f$ surjective
 		\item [-] Si $Y$ est un sev de F, alors $f^{-1}(Y)$ est un sev de $E$\\
 			En particulier, le noyau de $f$ se note $Ker f$ et $Ker f = \{0_E\} \Leftrightarrow f$ injective
-		\item [-] Si $f$ est injective et si $(x_1, \hdots x_n)$ est une famille libre de $E$, $(f(x_1), \hdots, f(x_n))$ est une famille libre
+		\item [-] Si $f$ est injective et si $(x_1, \hdots, x_n)$ est une famille libre de $E$, $(f(x_1), \hdots, f(x_n))$ est une famille libre
 			de $F$
 		\item [-] Soit $G$ une famille g\'en\'eratrice de $E$. $f$ surjective $\Leftrightarrow f(G)$ engendre $F$
 		\item [-] La composition de deux applications li\'eaires est lin\'eaire, la r\'eciproque d'un isomorphisme est lin\'eaire
