--- a/Fractions rationnelles.tex
+++ b/Fractions rationnelles.tex
@@ -76,6 +76,10 @@ Pour $F = \frac{A}{B}, G = \frac{C}{D} \in K(X)$:
 	$E$ est le quotient de la division euclidienne de $A$ par $B$.
 \end{theo}
 
+\begin{rqs}
+	On fait la d\'ecomposition de $F = \frac{A}{B} \in K(X)$ avec $A \land B = 1$ et $B$ unitaire
+\end{rqs}
+
 \subsection{D\'ecomposition dans $\mathbb{C}$}
 \begin{enumerate}
 	\item $z$ p\^ole simple de $F=\frac{A}{B}$:
@@ -93,9 +97,10 @@ Pour $F = \frac{A}{B}, G = \frac{C}{D} \in K(X)$:
 \section{Remarques}
 \begin{enumerate}
 	\item Regarder parit\'e des fonctions
-	\item Si $F \in R(X),\ z \in \mathbb{C} \backslash \mathbb{R}$ un p\^ole alors $\bar{z}$ est aussi p\^ole de $F$ de m\^eme ordre
-	\item Pour trouver les constantes dans $\mathbb{R}$, il peut \^etre utilide d'\'evaluer le polyn\^ome sur certaines valeures.\\ On peut aussi
-		multiplier par $X^\alpha$ pour regarder les limites en $\infty$
+	\item Si $F \in R(X),\ z \in \mathbb{C} \backslash \mathbb{R}$ un p\^ole alors $\bar{z}$ est aussi p\^ole de $F$ de m\^eme ordre. Ce qui
+		permet de trouver plus simplement certaines constantes
+	\item Pour trouver les constantes dans $\mathbb{R}$, il peut \^etre utile d'\'evaluer le polyn\^ome sur certaines valeures.\\ On peut
+		\'egalement multiplier par $X^\alpha$ puis regarder les limites en $\infty$
 \end{enumerate}
 
 \end{document}
