--- a/Suites réelles.tex
+++ b/Suites réelles.tex
@@ -158,4 +158,10 @@
 		\end{rqs}
 \end{enumerate}
 
+%Remarques {{{1
+\section{Remarques}
+\begin{enumerate}
+	\item On peut montrer qu'une certaine suite n'a pas de limite si on connait sa formule de r\'ecurrece en proc\'edant par l'absurde
+\end{enumerate}
+
 \end{document}
