--- a/Trigonométrie.tex
+++ b/Trigonométrie.tex
@@ -132,7 +132,7 @@ Pour \(y \in ]-1,1[, \arcsin'(y) = \frac{1}{\sqrt{1-y^2}}\) \\
 Pour \(y \in ]-1,1[, \arccos'(y) = -\frac{1}{\sqrt{1-y^2}}\) \\
 
 \subsection{Arctan}
-\(Arctan: [-\frac{\Pi}{2},\frac{\Pi}{2}] \rightarrow \mathbb{R}\) \\
+\(Arctan: \mathbb{R} \rightarrow [-\frac{\Pi}{2},\frac{\Pi}{2}]\) \\
 \(\arctan\) est impaire continue et strictement croissante \\
 Pour \(y \in \mathbb{R}, \arctan'(y) = \frac{1}{1+y^2}\) \\
 
