--- a/Équation différentielles.tex
+++ b/Équation différentielles.tex
@@ -117,9 +117,9 @@ Soit $P: aX^2 + bX + c$, trois cas se pr\'esentent:
 \end{enumerate}
 
 \subsubsection{Second membre de type exponentielle-polyn\^ome}
-Soit $Q: \mathbb{R} \rightarrow \mathbb{K}$ polyn\^omiale, $\alpha \in \mathbb{K}$. Soit $(E): ay'' + ay' + cy = Q(x)\exp(\alpha x)$ \\
-$P: aX^2 + bX + c$ le poly\^ome caract\'eristique de $(E_0): ay'' + by' + cy = 0$. Soit $T: \mathbb{R} \rightarrow \mathbb{K}$ polyn\^omiale
-et $\psi: x \in \mathbb{R} \mapsto T(x) \exp(\alpha x)$
+Soit $Q: \mathbb{R} \rightarrow \mathbb{K}$ polyn\^omiale de degr\'e $d$ et $\alpha \in \mathbb{K}$:\\ Soit $(E): ay'' + ay' + cy =
+Q(x)\exp(\alpha x)$ \\ $P: aX^2 + bX + c$ le poly\^ome caract\'eristique de $(E_0): ay'' + by' + cy = 0$. Soit $T: \mathbb{R}
+\rightarrow \mathbb{K}$ polyn\^omiale et $\psi: x \in \mathbb{R} \mapsto T(x) \exp(\alpha x)$
 \[\psi$ solution $\Leftrightarrow aT'' + P'(\alpha)T' + P(\alpha)T = Q\]
 \begin{enumerate}
 	\item $P(\alpha) \neq 0$. \\
@@ -134,7 +134,7 @@ et $\psi: x \in \mathbb{R} \mapsto T(x) \exp(\alpha x)$
 \section{Remarques}
 \begin{enumerate}
 	\item On raisonne souvent par analyse-synth\`ese il est donc important de v\'erifier les r\'ecriproques
-	\item Pour les $EDL_2$, on peut parfois se ramener \`a une \'equation \`a coefficients constants en composant par $e^t$
+	\item Pour les $EDL_2$ de la forme $ax^2y'' + bxy' + cy = 0$, on peut parfois se ramener \`a une \'equation \`a coefficients constants en composant par $e^t$
 	\item Dans $EDL_2$, s'il y a des $\cos$, on peut passer en exponnentielle complexe. Dans ce cas: \\
 		Si $\psi: \mathbb{R} \rightarrow \mathbb{C}$ est solution de $E_\mathbb{C}$, alors $Re(\psi)$ est solution de $(E)$
 \end{enumerate}
