--- a/Polynômes.tex
+++ b/Polynômes.tex
@@ -41,7 +41,7 @@ $\deg P = \max \{m \in \mathbb{N},\ a_m \neq 0\}$
 \end{rqs}
 
 \subsection{Inversibles}
-$P$ est inversible si et seulement si $P = \lambda \in K^*$
+$P \in K[X]$ est inversible si et seulement si $P = \lambda \in K^*$
 
 \subsection{Divilibilit\'e}
 $A, B \in K[X]$. On dit que $A$ divise $B$ s'il existe $C \in K[X]$ tel que $B = AC$
@@ -49,13 +49,13 @@ $A, B \in K[X]$. On dit que $A$ divise $B$ s'il existe $C \in K[X]$ tel que $B =
 \begin{prop} $ $
 	\begin{itemize}
 		\item [-] $A | 0$
-		\item [-] $\forall \lambda \in K^*, \lambda | A \land \lambda A | A$
+		\item [-] $\forall \lambda \in K^*, \lambda | A$ et $\lambda A | A$
 		\item [-] $A | B$ et $B|C \Rightarrow A | C$
 		\item [-]
 			$\left. \begin{array}{l}
 				A | B \\
 				A | C
-			\end{array}\right. \Rightarrow \forall U, V \in K[X],\ A |  BU + VC$
+			\end{array}\right. \Rightarrow \forall\ U, V \in K[X],\ A |  BU + VC$
 		\item [-] $A,B \in K[X],\ A|B$ et $B|A \Leftrightarrow \exists \lambda \in K^*,\ B = \lambda A$
 		\item [-] $B$ est associ\'e \`a $A$ si $B$ s'\'ecrit $B = \lambda A,\ \lambda \in K^*$
 		\item [-] $A | B \Rightarrow \deg A \leq \deg B$
@@ -67,7 +67,7 @@ $A, B \in K[X]$. On dit que $A$ divise $B$ s'il existe $C \in K[X]$ tel que $B =
 	$P \in K[X]$, on dit que $P$ est irr\'eductible si:
 	\begin{enumerate}
 		\item $P$ n'est pas constant ($\deg P \geq 1$)
-		\item les seuls diviseurs de $P$ sont les \'el\'ements de $K^*$ et les associ\'es de $P$
+		\item Les seuls diviseurs de $P$ sont les \'el\'ements de $K^*$ et les associ\'es de $P$
 	\end{enumerate}
 \end{defi}
 
@@ -92,8 +92,30 @@ $A, B \in K[X]$. On dit que $A$ divise $B$ s'il existe $C \in K[X]$ tel que $B =
 \end{theo}
 
 \begin{prop} Invariance de la divison euclidienne par extension de corps \\
-	Soit $K$ un sous corps de $L$ \\
+	Soit $K$ un sous corps de $L$:
 	$B | A$ dans $K[X] \Leftrightarrow B | A$ dans $L[X]$
+\end{prop}
+
+%Arithmétique {{{1
+\section{Arithm\'etique dans $K[X]$}
+\begin{defi} PGCD\\
+	Soient $A,B \in K[X]$. Il existe un et un seul $D \in K[X]$, nul ou unitaire tel que:
+	\begin{enumerate}
+		\item $D | A$ et $D | B$
+		\item $\forall P \in K[X],\ P|A$ et $P|B \Rightarrow P|D$
+	\end{enumerate}
+	\begin{rqs} Pour le calculer on utilise l'algorithme d'Euclide: Soient $A,B \in K[X]$, $(Q, R)$ la division euclidienne de $A$ par
+		$B$. Alors, pgcd($A,B$) = pgcd($B,R$)
+	\end{rqs}
+\end{defi}
+
+\begin{prop} $ $
+	\begin{enumerate}
+		\item B\'ezout
+		\item Gauss et variantes
+		\item Soit $P$ irr\'eductible, $A,B \in K[X]$ alors $P|A$ ou $P \land A = 1$ \\
+			Si $P | AB$ alors $P|A$ ou $P|B$
+	\end{enumerate}
 \end{prop}
 
 %Racines {{{1
@@ -108,7 +130,7 @@ $A, B \in K[X]$. On dit que $A$ divise $B$ s'il existe $C \in K[X]$ tel que $B =
 	\begin{itemize}
 		\item [-] $\tilde{P+Q}(t) = \tilde{P}(t) + \tilde{Q}(t)$
 		\item [-] $\tilde{PQ}(t) = \tilde{P}(t) \tilde{Q}(t)$
-		\item [-] $\sim$ est un morphisme d'anneaux
+		\item [-] $P \mapsto \tilde{P}$ est un morphisme d'anneaux
 	\end{itemize}
 \end{prop}
 
@@ -128,7 +150,7 @@ $A, B \in K[X]$. On dit que $A$ divise $B$ s'il existe $C \in K[X]$ tel que $B =
 		\item $x$ racine de $P \Leftrightarrow X - x$ divise $P$ dans $K[X]$
 		\item $x_i (1 \leq i \leq r)$ racine de $P \Leftrightarrow \prod (X - x_i)$ divise $P$ dans $K[X]$
 		\item Soit $P \in K[X]$ de degr\'e $n$. Alors $P$ admet au plus $n$ racines distinctes
-		\item Soit $n$ tel que $\deg P \leq n$. Si $P$ admet $n+1$ racines distinctes dans $K$ alors $P = 0$ \\
+		\item Soit $n$ tel que $\deg P \leq n$. Si $P$ admet $n+1$ racines distinctes dans $K$ alors $P = 0$.
 			Si $P$ admet une infinit\'e de racines dans $K$ alors $P = 0$
 		\item $P,Q \in K[X]$. Soit $n$ tel que $\deg P \leq n$ et $\deg Q \leq n$ \\
 			Si $\tilde{P}$ et $\tilde{Q}$ co\"incident en $n+1$ points distincts, alors $P=Q$
@@ -166,36 +188,44 @@ $A, B \in K[X]$. On dit que $A$ divise $B$ s'il existe $C \in K[X]$ tel que $B =
 	Le coefficient de $X^{n-k}$ dans $P = (X+x_1) \hdots (X + x_n)$ est $\sum_{I \in P_k(n)} \prod_{j \in I} x_j$
 \end{prop}
 
-%Arithmétique {{{1
-\section{Arithm\'etique dans $K[X]$}
-\begin{defi} PGCD\\
-	Soient $A,B \in K[X]$. Il existe un et un seul $D \in K[X]$, nul ou unitaire tel que:
-	\begin{enumerate}
-		\item $D | A$ et $D | B$
-		\item $\forall P \in K[X],\ P|A$ et $P|B \Rightarrow P|D$
-	\end{enumerate}
-\end{defi}
-
-\begin{prop} $ $
-	\begin{enumerate}
-		\item B\'ezout
-		\item Gauss et variantes
-	\end{enumerate}
-\end{prop}
+%Étude dans C et R {{{1
+\section{\'Etudes dans $\mathbb{C}$ et $\mathbb{R}$}
+\begin{enumerate}
+	\item \'Etude de $\mathbb{C}[X]$:
+		\begin{enumerate}
+			\item Soit $P \in \mathbb{C}[X]$ non constant alors $P$ s'\`ecrit $P = c\prod (X-z_i)^{\alpha_i}$
+			\item Soient $A,B \in \mathbb{C}[X]\backslash \{0\},$ $A$ divise $B$ dans $\mathbb{C}[X] \Leftrightarrow R(A) \subset R(B)$ et
+				$\forall z \in R(A),\ \alpha(z) \leq \beta(z)$
+			\item $A \land B = 1 \Leftrightarrow R(A) \cap R(B) = \emptyset$
+		\end{enumerate}
+	\item \'Etude de $\mathbb{R}[X]$:
+		\begin{enumerate}
+			\item Soit $P \in \mathbb{R}[X]$ non constant alors $P$ s'\`ecrit:\\ $P = c\prod_k (X - x_k)^{\alpha_k} \prod_p (X^2 + b_p X + c_p)^
+				{\beta_p}$ avec $b_p^2 - 4c_p < 0$
+			\item Soit dans $\mathbb{C}$, $P = c\prod(X - x_i)^{\alpha_i} \prod (X-z_k)^{\beta_k} (X-\bar{z_k})^{\beta_k}$
+		\end{enumerate}
+\end{enumerate}
 
 %Dérivation {{{1
 \section{D\'erivation}
 \begin{prop} $ $
 	\begin{enumerate}
 		\item $\deg D^k(P) = \deg P - k$
-		\item $D(\alpha P + Q) = \alpha D(P) + D(Q)$ \\
-			$D(PQ) = P'Q + PQ'$
+		\item Soit $P \in K[X]$ de degr\'e $n$ et coeffdom $a$ alors coeffom$(D^k(P)) = \frac{n!}{(n-k)!}a$
+		\item \begin{enumerate}
+			\item $D(\alpha P + Q) = \alpha D(P) + D(Q)$
+			\item $D(PQ) = P'Q + PQ'$
+			\end{enumerate}
+		\item Soit $P \in K[X],\ m \in \mathbb{N}$ alors $D(P^m) = m P' P^{m-1}$
 		\item $D^k(PQ) = \sum_{i = 0}^k \binom{k}{i}P^{(i)}Q^{(k-i)}$
 	\end{enumerate}
 \end{prop}
 \begin{theo} Taylor
 	\[a \in K,\ P = \sum_k \frac{\tilde{P}^{(k)}(a)}{k!} (X - a)^k\]
 \end{theo}
+\begin{prop}
+	\item Soit $P \in K[X], k \in \mathbb{N}^*,\ a \in K$ alors: $(X-a)^k | P \Leftrightarrow \tilde{P}^{(i)}(a) = 0\ (0 \leq i \leq k-1)$
+\end{prop}
 
 %Composition {{{1
 \section{Composition}
